d2c-org/ilh-sales/base-code/main/default/objects/RateComparisonInterval__mdt/RateComparisonInterval__mdt.object-meta.xml
<CustomObject>
    <description>Interval information for rate page.  Label = Product Category</description>
    <label>Rate Comparison Interval</label>
    <pluralLabel>Rate Comparison Intervals</pluralLabel>
</CustomObject>