d2c-org/ilh-sales/base-code/main/default/objects/RateComparisonInterval__mdt/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <description>Intervals that should be displayed for this product category.</description>
    <inlineHelpText>Intervals that should be displayed for this product category.</inlineHelpText>
    <label>Interval</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>