d2c-org/ilh-sales/base-code/main/default/objects/RateComparisonInterval__mdt/fields/LowerBound__c.field-meta.xml
<CustomField>
    <fullName>LowerBound__c</fullName>
    <description>Lower coverage amount for this product category.</description>
    <inlineHelpText>Lower coverage amount for this product category.</inlineHelpText>
    <label>Lower Bound</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>