d2c-org/ilh-sales/base-code/main/default/objects/RateComparisonInterval__mdt/fields/UpperBound__c.field-meta.xml
<CustomField>
    <fullName>UpperBound__c</fullName>
    <description>Upper coverage amount for this product category.</description>
    <inlineHelpText>Upper coverage amount for this product category.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>